Init argument parsing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Christopher Chin <ctchin13@gmail.com>"]
 
 [dependencies]
+argparse = "*"
 input = { path = "/home/yutoo/input.rs" }
 libudev-sys = "*"
 libc = "*"
